{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 34,
  "lineage": "35d57993-e9a7-7086-b58a-11b3427150b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de8d07c1053b36d5",
            "domain": "vpc",
            "id": "eipalloc-0de8d07c1053b36d5",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-149-23.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.149.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTIONHOST_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc87e5027adcdca8",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-0f5d59906df462404",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5d59906df462404",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anael1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010ba30a8f5e0a7b5",
            "private_dns": "ip-10-0-1-193.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_ip": "13.58.25.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-096cac9afe61a5caf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051cb4f4a91196c74",
            "tags": {
              "Name": "Batsion-ec2"
            },
            "tags_all": {
              "Name": "Batsion-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07e3cc4f1feb0b055"
            ]
          },
          "dependencies": [
            "aws_security_group.SG-bastionhosts",
            "aws_subnet.public-bastion",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc87e5027adcdca8",
            "arn": "arn:aws:ec2:us-east-2:729855611727:instance/i-04b248c382f26688e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b248c382f26688e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "anael1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4c49138840fe546",
            "private_dns": "ip-10-0-10-223.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f8a27c037df0706",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fab54582f02a11e",
            "tags": {
              "Name": "Web_ec2"
            },
            "tags_all": {
              "Name": "Web_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0660f2db3bd51112b"
            ]
          },
          "dependencies": [
            "aws_lb.my_app_eg1",
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-loadbalancer",
            "aws_security_group.sg-web",
            "aws_subnet.lb",
            "aws_subnet.private-web",
            "aws_subnet.public-bastion",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:internet-gateway/igw-00aa259f12ccf06c3",
            "id": "igw-00aa259f12ccf06c3",
            "owner_id": "729855611727",
            "tags": {
              "Name": "my-igw2"
            },
            "tags_all": {
              "Name": "my-igw2"
            },
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_app_eg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-app-eg1/71d02e8bec9561e5",
            "arn_suffix": "app/my-app-eg1/71d02e8bec9561e5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-app-eg1-1437993167.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-app-eg1/71d02e8bec9561e5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-app-eg1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033d1006f41c2e2e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051cb4f4a91196c74"
              },
              {
                "subnet_id": "subnet-0d854749e5c794cb1"
              }
            ],
            "subnets": [
              "subnet-051cb4f4a91196c74",
              "subnet-0d854749e5c794cb1"
            ],
            "vpc_id": "vpc-0c970961164a1f358",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.SG-loadbalancer",
            "aws_subnet.lb",
            "aws_subnet.public-bastion",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_eg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-app-eg1/71d02e8bec9561e5/5f8f838816c1c86f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-app-eg1/71d02e8bec9561e5/5f8f838816c1c86f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-app-eg1/71d02e8bec9561e5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_app_eg1",
            "aws_security_group.SG-loadbalancer",
            "aws_subnet.lb",
            "aws_subnet.public-bastion",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_app_eg2_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-app-eg1/71d02e8bec9561e5/6097f8cac4088f73",
            "certificate_arn": "arn:aws:acm:us-east-2:729855611727:certificate/70c54460-5810-4cc3-8fe0-32e804cde308",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-app-eg1/82165652837a6513",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:listener/app/my-app-eg1/71d02e8bec9561e5/6097f8cac4088f73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:loadbalancer/app/my-app-eg1/71d02e8bec9561e5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.api",
            "aws_acm_certificate_validation.api",
            "aws_lb.my_app_eg1",
            "aws_lb_target_group.my_app_eg1",
            "aws_route53_record.api_validation",
            "aws_security_group.SG-loadbalancer",
            "aws_subnet.lb",
            "aws_subnet.public-bastion",
            "aws_vpc.example",
            "data.aws_route53_zone.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_app_eg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-app-eg1/82165652837a6513",
            "arn_suffix": "targetgroup/my-app-eg1/82165652837a6513",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 9,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 9
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-app-eg1/82165652837a6513",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-app-eg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_app_eg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-app-eg1/82165652837a6513-20230729164110293700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:729855611727:targetgroup/my-app-eg1/82165652837a6513",
            "target_id": "i-04b248c382f26688e"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb.my_app_eg1",
            "aws_lb_target_group.my_app_eg1",
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-loadbalancer",
            "aws_security_group.sg-web",
            "aws_subnet.lb",
            "aws_subnet.private-web",
            "aws_subnet.public-bastion",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de8d07c1053b36d5",
            "connectivity_type": "public",
            "id": "nat-09ab003a13027b138",
            "network_interface_id": "eni-0c97bc121fe74cb3b",
            "private_ip": "10.0.2.153",
            "public_ip": "3.19.149.23",
            "subnet_id": "subnet-01a5230d3b7136069",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip-ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public-nat",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:route-table/rtb-04179a0f4a2a59f0b",
            "id": "rtb-04179a0f4a2a59f0b",
            "owner_id": "729855611727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ab003a13027b138",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " route table to NAT"
            },
            "tags_all": {
              "Name": " route table to NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat",
            "aws_subnet.public-nat",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:route-table/rtb-0211e132376e2d355",
            "id": "rtb-0211e132376e2d355",
            "owner_id": "729855611727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00aa259f12ccf06c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0972e9a40378c86bd",
            "route_table_id": "rtb-0211e132376e2d355",
            "subnet_id": "subnet-051cb4f4a91196c74"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public-bastion",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085085057fe9e829c",
            "route_table_id": "rtb-0211e132376e2d355",
            "subnet_id": "subnet-0d854749e5c794cb1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.lb",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1bde641de1df330",
            "route_table_id": "rtb-0211e132376e2d355",
            "subnet_id": "subnet-01a5230d3b7136069"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public-nat",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebed82e433e453b7",
            "route_table_id": "rtb-04179a0f4a2a59f0b",
            "subnet_id": "subnet-08fab54582f02a11e"
          },
          "dependencies": [
            "aws_eip.eip-ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat",
            "aws_route_table.nat",
            "aws_subnet.private-web",
            "aws_subnet.public-nat",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-bastionhosts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-07e3cc4f1feb0b055",
            "description": "Security group for bastion hosts",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e3cc4f1feb0b055",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH from management IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG-bastionhosts",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-bastionhosts"
            },
            "tags_all": {
              "Name": "SG-bastionhosts"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-033d1006f41c2e2e8",
            "description": "Security group for the load-balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-033d1006f41c2e2e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SG-loadbalancer",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-loadbalancers"
            },
            "tags_all": {
              "Name": "SG-loadbalancers"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:security-group/sg-0660f2db3bd51112b",
            "description": "Security group for web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0660f2db3bd51112b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07e3cc4f1feb0b055"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033d1006f41c2e2e8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow incoming SSH traffic from bastion hosts",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033d1006f41c2e2e8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-web",
            "name_prefix": "",
            "owner_id": "729855611727",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-web"
            },
            "tags_all": {
              "Name": "SG-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-bastionhosts",
            "aws_security_group.SG-loadbalancer",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-0d854749e5c794cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d854749e5c794cb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-lb"
            },
            "tags_all": {
              "Name": "Subnet-lb"
            },
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-08fab54582f02a11e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fab54582f02a11e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-web"
            },
            "tags_all": {
              "Name": "Subnet-web"
            },
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-051cb4f4a91196c74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051cb4f4a91196c74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-bastion1"
            },
            "tags_all": {
              "Name": "Subnet-bastion1"
            },
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:subnet/subnet-01a5230d3b7136069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a5230d3b7136069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729855611727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-nat"
            },
            "tags_all": {
              "Name": "Subnet-nat"
            },
            "vpc_id": "vpc-0c970961164a1f358"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:729855611727:vpc/vpc-0c970961164a1f358",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1bd44fd357a8064",
            "default_route_table_id": "rtb-050501bcdd95958bd",
            "default_security_group_id": "sg-0f21a69bbf67fd70f",
            "dhcp_options_id": "dopt-0b1f95f4d053dd89a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c970961164a1f358",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050501bcdd95958bd",
            "owner_id": "729855611727",
            "tags": {
              "Name": "VPC-2"
            },
            "tags_all": {
              "Name": "VPC-2"
            }
          }
        }
      ]
    }
  ]
}